# InvestHelper

./: .gitignore  README.md  pyproject.toml  ui_main.spec
InvestHelper/: common_util.py  database.py  investment.py  language.py  report.py  ui_dividend.py  ui_main.py  ui_new_product.py  ui_price_update.py  ui_product.py  ui_redemption.py  ui_subscription.py
