[tool.poetry]
name = "investhelper"
version = "0.1.0"
description = "Investment Helper"
authors = ["Mingqian <mq_han@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pysimplegui = "^5.0.4"
openpyxl = "^3.1.2"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"